--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,34 @@
 #root {
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
 .header {
   border: solid 1px black;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.headerText {
+  text-align: center;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  display: flex;
+  gap: 10vw
+}
+
+.imageCropper {
+  border-radius: 50%;
+  overflow: hidden;
+  height: 150px;
+  width: 150px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.profilePic {
+  position: relative;
 }
 
