--- a/src/App.css
+++ b/src/App.css
@@ -8,21 +8,22 @@ body {
 }
 
 .sidebar {
+  overflow-y: auto;
   height: 100vh;
   width: 35vw;
   position: fixed;
   right: 0;
   top: 0;
   padding-top: 40px;
-  background-color: #1F1A24;
+  background-color: #171319;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
 }
-.sidebar div {
-  padding: 8px;
-  font-size: 24px;
-  display: block;
+
+.sidebar::-webkit-scrollbar {
+  display: none;
 }
+
 h4 {
   color: rgb(147, 147, 147);
   font-size: 4vh;
@@ -195,6 +196,37 @@ h3 {
     left: 50%; 
     transform: translate(-50%, -50%);
   }
+}
+
+.project-card {
+  margin-left: 2vw;
+  margin-right: 2vw;
+  margin-bottom: 2vw;
+  height: 10vw;
+  width: 100;
+  min-height: 208px;
+  display: flex;
+  background-color: #1F1A24;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.8);
+}
+
+.project-card:hover {
+  box-shadow: 20px 20px 35px rgba(0, 0, 0, 0.8);
+  transition: 0.1s ease-in-out;
+}
+
+.project-card-pic {
+  position: relative;
+  height: 100%
+}
+
+.project-card-text {
+  color: white;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: left;
+  margin-left: 1.5vw;
+  margin-right: 1.5vw;
+  font-size: 0.8vw;
 }
 
 .project {
