--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,13 @@ body {
   position: fixed;
   right: 0;
   top: 0;
-  padding-top: 40px;
   background-color: #171319;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
+}
+
+.link {
+  text-decoration: none;
 }
 
 .sidebar::-webkit-scrollbar {
@@ -25,7 +28,7 @@ body {
 }
 
 h4 {
-  color: rgb(147, 147, 147);
+  color: rgb(181, 181, 181);
   font-size: 4vh;
 }
 
@@ -84,6 +87,11 @@ h2 {
 
 h3 {
   font-size: 2vh;
+  color: rgb(176, 176, 176);
+}
+
+h5 {
+  font-size: 1.5vh;
 }
 
 .profile-pic {
@@ -92,7 +100,7 @@ h3 {
 }
 
 .profile-text {
-  color: white;
+  color: rgb(176, 176, 176);
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: left;
   margin-left: 1.5vw;
@@ -227,6 +235,10 @@ h3 {
   margin-left: 1.5vw;
   margin-right: 1.5vw;
   font-size: 0.8vw;
+}
+
+.project-card-blurb {
+  color: rgb(147, 147, 147);
 }
 
 .project {
