--- a/src/App.css
+++ b/src/App.css
@@ -261,6 +261,7 @@ h5 {
   grid-template-columns: 50vw 50vw;
   grid-template-rows: 30vh 30vh 40vh;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  overflow-y: auto;
 }
 
 .project-header {
@@ -277,6 +278,7 @@ h5 {
   margin-left: 5vw;
   color: rgb(147, 147, 147);
   text-align: left;
+  font-size: 2vh;
 }
 
 .home-button {
@@ -284,4 +286,28 @@ h5 {
   grid-row-start: 3;
 }
 
+.accordions {
+  margin-top: 50px;
+}
 
+.wrapper {
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.wrapper .accordion-title-container {
+  font-size: 3vh;
+  font-weight: bold;
+}
+
+.wrapper .accordion-title {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+
+}
+
+.wrapper .accordion-content-container {
+  padding: 0 1rem;
+  transition: height .7s ease-in-out;
+  font-size: 2vh;
+}
