--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,11 @@ body {
   padding-top: 10px;
   height: 2.5vh;
 }
+.home-icon-column {
+  padding-top: 10px;
+  height: 2.5vh;
+  display: none
+}
 
 h4 {
   color: rgb(181, 181, 181);
@@ -84,6 +89,10 @@ h2 {
   grid-template-columns: 50vw 50vw;
   grid-template-rows: 30vh 30vh 40vh;
 }
+.home-content {
+  grid-column-start: 1;
+  grid-row-start: 2;
+}
 
 .card {
   margin-left: 5vw;
@@ -130,6 +139,9 @@ h5 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   align-items: center;
+}
+.contact-icons {
+  display: none;
 }
 
 .linkedin-text {
@@ -180,57 +192,16 @@ h5 {
   max-height: 45px;
 }
 
-@media only screen and (max-width: 1400px){
-  .card {
-    height: 210px;
-    width: 560px;
-  }
-  .profile-text {
-    font-size: 11.2px;
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  .card {
-    display: grid;
-    grid-template-areas: 
-    "profile-pic"
-    "profile-text"
-    ;
-    width: 225px
-  }
-  .profile-pic {
-    grid-area: "profile-pic";
-    height: 225px;
-    width: 225px;
-  }
-  .profile-text {
-    grid-area: "profile-text";
-    background-color: #1F1A24;
-    margin: 0;
-    padding: 10px;
-  }
-}
-
-@media only screen and (max-width: 430px) {
-  .card {
-    position: absolute;
-    top: 30%; 
-    left: 50%; 
-    transform: translate(-50%, -50%);
-  }
-}
-
 .project-card {
   margin-left: 2vw;
   margin-right: 2vw;
   margin-bottom: 2vw;
-  height: 10vw;
-  width: 100;
-  min-height: 208px;
+  height: 15vw;
+  /* min-height: 208px; */
   display: flex;
   background-color: #1F1A24;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.8);
+  border-radius: 20px 20px 20px 20px;
 }
 
 .project-card:hover {
@@ -240,7 +211,8 @@ h5 {
 
 .project-card-pic {
   position: relative;
-  height: 100%
+  height: 100%;
+  border-radius: 20px 0px 0px 20px;
 }
 
 .project-card-text {
@@ -264,24 +236,25 @@ h5 {
   overflow-y: auto;
 }
 
-.project-header {
-  grid-column-start: 1;
-  grid-row-start: 1;
-  margin-left: 5vw;
-  padding-bottom: 2%;
-  padding-top: 2%;
-}
-
 .project-body {
   grid-column-start: 1;
-  grid-row-start: 2;
+  /* grid-row-start: 2; */
   margin-left: 5vw;
   color: rgb(147, 147, 147);
   text-align: left;
   font-size: 2vh;
 }
 .hyperlink {
-  margin-bottom: 35px;
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 3fr 3fr;
+}
+.repo-link {
+  justify-self: left;
+}
+.app-link {
+  justify-self: right;
+  margin-left: 40px;
 }
 
 a {
@@ -322,8 +295,10 @@ a:hover {
 }
 .wrapper .accordion-title {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-
+  grid-template-columns: 10fr 1fr;
+  background-color: rgba(0, 0, 0, 0.25);
+  padding-bottom: 5px;
+  padding-left: 20px;
 }
 .wrapper .accordion-content-container {
   padding: 0 1rem;
@@ -342,4 +317,111 @@ a:hover {
 }
 .carousel-img-horiz {
   max-width: 80vh;
+}
+
+@media only screen and (max-width: 1400px){
+  .card {
+    height: 210px;
+    width: 560px;
+  }
+  .profile-text {
+    font-size: 11.2px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  h1 {
+    font-size: 5vh;
+  }
+
+  h2 {
+    font-size: 4vw;
+  }
+  .project-header {
+    height: 40vw;
+  }
+
+  .card {
+    display: grid;
+    grid-template-areas: 
+    "profile-pic"
+    "profile-text"
+    ;
+    width: 225px
+  }
+  .profile-pic {
+    grid-area: "profile-pic";
+    height: 225px;
+    width: 225px;
+  }
+  .profile-text {
+    grid-area: "profile-text";
+    background-color: #1F1A24;
+    margin: 0;
+    padding: 10px;
+  }
+
+  .project-card {
+    display: grid;
+    grid-template-areas: 
+    "project-pic"
+    "project-text";
+    width: 25vw;
+    height: 300px;
+    margin-left: 0;
+    margin-right: 0;
+    border-radius: 20px 20px 20px 20px;
+  }
+  .project-card-pic {
+    grid-area: "project-pic";
+    width: 25vw;
+    height: 25vw;
+    border-radius: 20px 20px 0px 0px;
+  }
+  .project-card-text {
+    grid-area: "project-text";
+  }
+  .project-card-blurb {
+    display: none;
+  }
+  .sidebar-projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .link {
+    height: 300px;
+    margin-bottom: 20px;
+  }
+  .home-icon {
+    display: none;
+  }
+  .home-icon-column {
+    display: grid;
+    margin-bottom: 30px;
+  }
+
+  .contact-info {
+    display: none;
+  }
+  .contact-icons {
+    display: flex;
+    gap: 60px;
+    position: absolute;
+    top: 90%;
+    margin-left: 5vw;
+  }
+  .contact-icon {
+    height: 30px
+  }
+}
+
+@media only screen and (max-width: 430px) {
+  .card {
+    position: absolute;
+    top: 30%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+  }
 }
