--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,9 @@ h5 {
   margin-right: 1.5vw;
   font-size: 0.8vw;
 }
+.profile-text-cut {
+  display: none;
+}
 
 .contact-info {
   margin-left: 5vw;
@@ -334,6 +337,32 @@ a:hover {
   .profile-text {
     font-size: 11.2px;
   }
+  h1 {
+    font-size: 5vh;
+  }
+
+  h2 {
+    font-size: 4vh;
+  }
+  h3 {
+    font-size: 1.5vh;
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+  .sidebar-projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .home-icon {
+    display: none;
+  }
+  .home-icon-column {
+    display: grid;
+    margin-bottom: 30px;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -393,22 +422,9 @@ a:hover {
   .project-card-blurb {
     display: none;
   }
-  .sidebar-projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
   .link {
     height: 300px;
     margin-bottom: 20px;
-  }
-  .home-icon {
-    display: none;
-  }
-  .home-icon-column {
-    display: grid;
-    margin-bottom: 30px;
   }
 
   .contact-info {
@@ -443,16 +459,27 @@ a:hover {
 }
 
 @media only screen and (max-width: 560px) {
-  .card {
-    position: absolute;
-    top: 40%; 
-    left: 50%; 
-    transform: translate(-50%, -50%);
+  .header {
     margin-left: 0px;
+    align-self: start;
+    margin-left: 5vw;
+  }
+  .card {
+    position: relative;
+    margin-left: 0px;
+    align-self: center;
+    width: 200px;
+  }
+  .profile-pic {
+    width: 200px;
+    height: 200px;
+  }
+  .profile-text-body {
+    font-size: 12px;
   }
   .contact-icons {
-    position: absolute;
-    left: 8%
+    margin-left: 0;
+    align-self: center;
   }
   .sidebar {
     display: none;
@@ -461,5 +488,31 @@ a:hover {
     display: grid;
     overflow: auto;
     grid-template-columns: 1fr;
+  }
+  .home {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-items: center;
+  }
+}
+
+@media only screen and (max-height: 730px) {
+  .profile-text-full {
+    display: none;
+  }
+  .profile-text-cut {
+    margin-top: 8%;
+    display: block;
+    font-size: 11px;
+  }
+  .profile-header {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .contact-icon {
+    height: 20px;
   }
 }
