--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,9 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
 }
+.sidebar-mobile {
+  display: none;
+}
 
 .link {
   text-decoration: none;
@@ -456,6 +459,11 @@ a:hover {
   .contact-icon {
     height: 30px
   }
+  /* .home-header {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr;
+  } */
 }
 
 @media only screen and (max-width: 560px) {
@@ -483,6 +491,10 @@ a:hover {
   }
   .sidebar {
     display: none;
+  }
+  .sidebar-mobile {
+    display: grid;
+    color: white
   }
   .project {
     display: grid;
@@ -515,4 +527,39 @@ a:hover {
   .contact-icon {
     height: 20px;
   }
+}
+
+
+.navbar {
+  display: flex;
+  align-items: left;
+}
+.menu-bars {
+  margin-left: 2rem;
+  font-size: 2rem;
+  background: none;
+  color: white;
+  position: absolute;
+  left: 78%;
+  top: 8%
+}
+.menu-bars:hover {
+  color: #6a6a6a;
+}
+.nav-menu {
+  background-color: #171319;
+  width: 70vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  right: -100%;
+  transition: 850ms;
+  z-index: 10;
+  box-shadow: -10px 5px 20px rgba(0, 0, 0, 0.8);
+} 
+.nav-menu.active {
+  right: 0;
+  transition: 350ms;
 }
