--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ body {
 h4 {
   color: rgb(181, 181, 181);
   font-size: 4vh;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .bg-img {
@@ -459,11 +460,6 @@ a:hover {
   .contact-icon {
     height: 30px
   }
-  /* .home-header {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr;
-  } */
 }
 
 @media only screen and (max-width: 560px) {
@@ -543,14 +539,12 @@ a:hover {
   left: 78%;
   top: 8%
 }
-.menu-bars:hover {
-  color: #6a6a6a;
-}
 .nav-menu {
   background-color: #171319;
   width: 70vw;
   height: 100vh;
-  display: flex;
+  display: grid;
+  grid-template-rows: 1fr 8fr;
   justify-content: center;
   position: fixed;
   top: 0;
@@ -562,4 +556,20 @@ a:hover {
 .nav-menu.active {
   right: 0;
   transition: 350ms;
+}
+.nav-menu-header {
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-rows: 1fr;
+  align-items: center;
+}
+.nav-menu-title {
+  grid-column-start: 2;
+}
+.close-button {
+  grid-column-start: 1;
+  font-size: 2rem;
+  background: none;
+  color: rgb(181, 181, 181);
+  padding-top: 10px;
 }
