--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,23 @@
   text-align: center;
 }
 
-body {
-  overflow: hidden;
+@font-face {
+  font-family: "Lil Grotesk";
+  src: local("Lil Grotesk"), url("./fonts/LilGrotesk-Bold.otf") format("opentype");
 }
 
+.dosis {
+  font-family: "Dosis", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+}
+
+body {
+  overflow: hidden;
+  background-image: url("assets/portfolio-background.jpg");
+  background-size: cover;
+}
 .sidebar {
   overflow-y: auto;
   height: 100vh;
@@ -49,12 +62,12 @@ body {
 h4 {
   color: rgb(181, 181, 181);
   font-size: 4vh;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Dosis";
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
   margin-bottom: 20px;
 }
 
 .bg-img {
-  width: 100%;
   height: 100%;
   position: fixed;
   right: 0;
@@ -62,10 +75,12 @@ h4 {
   top: 0;
   bottom: 0;
   z-index: -5;
+  background-size: cover;
 }
 
 .header {
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Dosis";
+  /* font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
   margin-left: 5vw;
   padding-bottom: 2%;
   padding-top: 2%;
@@ -76,12 +91,14 @@ h1 {
   text-align: left;
   margin-bottom: 0px;
   color: white;
+  font-family: "Dosis";
 }
 
 h2 {
   text-align: left;
-  color: rgb(147, 147, 147);
+  color: rgb(255, 255, 255);
   font-size: 4vh;
+  font-family: "Dosis";
 }
 
 
@@ -125,6 +142,7 @@ h5 {
 .profile-text {
   color: rgb(176, 176, 176);
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  /* font-family: "Dosis"; */
   text-align: left;
   margin-left: 1.5vw;
   margin-right: 1.5vw;
@@ -248,7 +266,7 @@ h5 {
 .project-body {
   grid-column-start: 1;
   margin-left: 5vw;
-  color: rgb(147, 147, 147);
+  color: rgb(255, 255, 255);
   text-align: left;
   font-size: 2vh;
 }
@@ -263,7 +281,7 @@ h5 {
 .repo-link {
   justify-self: left;
   text-decoration: none;
-  color: rgb(147, 147, 147);
+  color: rgb(220, 220, 220);
   font-weight: bold;
   font-size: 3vh;
 }
@@ -271,13 +289,13 @@ h5 {
   justify-self: right;
   margin-left: 40px;
   text-decoration: none;
-  color: rgb(147, 147, 147);
+  color: rgb(220, 220, 220);
   font-weight: bold;
   font-size: 3vh;
 }
 
 a:hover {
-  color: rgb(220, 220, 220);
+  color: rgb(147, 147, 147);
 }
 
 li {
